# SignSpeak-python-opencv-mediapipe-yasir-uet-lahore

./: PROJECT_GUIDE.md  app.py  main.py  pyproject.toml
static/css/: style.css
static/js/: app.js
templates/: index.html
